--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">Farmassist</a>
+        <a href="#" class="nav__logo" >Farmassist</a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
             <li class="nav__item">
@@ -80,7 +80,7 @@
               >
                 <i class="uil uil-linkedin-alt"></i>
               </a> -->
-              
+
               <a
                 href="https://github.com/yadhukrishnapp"
                 target="_blank"
@@ -122,9 +122,11 @@
             </div>
 
             <div class="home__data">
-              <h1 class="home__title">Hello All</h1>
+              <h1 class="home__title" onclick="myFunction()">Hello All</h1>
               <!-- 👋 -->
-              <h3 class="home__subtitle">We are BE E&TC Undergraduates from AIT, Pune. Our team :</h3>
+              <h3 class="home__subtitle">
+                We are BE E&TC Undergraduates from AIT, Pune. Our team :
+              </h3>
               <p class="home__description">
                 <span class="typing-text"></span>
               </p>
@@ -152,21 +154,29 @@
         <div class="about__container container grid">
           <img src="packages/images/app_icon.png" alt="" class="about__img" />
           <div class="about__data">
-            <p class="about__description">Farmassist is a smart farming app for IoT and AI-powered plant disease detection. It is built with Flutter and uses Firebase as its backend. <br><br>
-            <span class="about_data">Frontend:</span>&nbsp; &nbsp;Flutter <br>
-            <span class="about_data">Languages:</span>&nbsp;&nbsp; Dart, MySQL <br>
-            <span class="about_data">Backend:</span>&nbsp;&nbsp; Firebase <br>
-            <span class="about_data">Dashboard:</span>&nbsp; &nbsp;Grafana <br>
-
+            <p class="about__description">
+              Farmassist is a smart farming app for IoT and AI-powered plant
+              disease detection. It is built with Flutter and uses Firebase as
+              its backend. <br /><br />
+              <span class="about_data">Frontend:</span>&nbsp; &nbsp;Flutter
+              <br />
+              <span class="about_data">Languages:</span>&nbsp;&nbsp; Dart, MySQL
+              <br />
+              <span class="about_data">Backend:</span>&nbsp;&nbsp; Firebase
+              <br />
+              <span class="about_data">Dashboard:</span>&nbsp; &nbsp;Grafana
+              <br />
             </p>
-        
+
             <div class="about__buttons">
               <a
                 download=""
                 href="https://drive.google.com/drive/folders/1WeNVLcYJHVB7ljOnz-eOs8NNJPUktVre"
                 class="button button--flex"
               >
-                Download APK here<i class="uil uil-download-alt button__icon"></i>
+                Download APK here<i
+                  class="uil uil-download-alt button__icon"
+                ></i>
               </a>
             </div>
           </div>
@@ -270,8 +280,7 @@
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">Soil Salinity</h3>
-                    <span class="skills__number">(Millisiemens/cm)
-                    </span>
+                    <span class="skills__number">(Millisiemens/cm) </span>
                   </div>
                   <!-- <div class="skills__bar">
                     <span class="skills__percentage skills__dbms"></span>
@@ -286,77 +295,76 @@
                     <span class="skills__percentage skills__dbms"></span>
                   </div> -->
                 </div>
-                <div class="skills__data">
+                <div class="skills__data"></div>
               </div>
             </div>
-          </div>
 
-          <div>
-            <!--==================== SKILLS 3 ====================-->
-            <div class="skills__content skills__close">
-              <div class="skills__header">
-                <i class="uil uil-bug skills__icon"></i>
-                <div>
-                  <h1 class="skills__title">Disease Detection</h1>
-                </div>
-
-                <i class="uil uil-angle-down skills__arrow"></i>
-              </div>
-              <div class="skills__list grid">
-                <div class="skills__data">
-                  <div class="skills__titles">
-                    <h3 class="skills__name">Corn Common Rust</h3>
-                    <!-- <span class="skills__number">95%</span> -->
+            <div>
+              <!--==================== SKILLS 3 ====================-->
+              <div class="skills__content skills__close">
+                <div class="skills__header">
+                  <i class="uil uil-bug skills__icon"></i>
+                  <div>
+                    <h1 class="skills__title">Disease Detection</h1>
                   </div>
-                  <!-- <div class="skills__bar">
+
+                  <i class="uil uil-angle-down skills__arrow"></i>
+                </div>
+                <div class="skills__list grid">
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <h3 class="skills__name">Corn Common Rust</h3>
+                      <!-- <span class="skills__number">95%</span> -->
+                    </div>
+                    <!-- <div class="skills__bar">
                     <span class="skills__percentage skills__html"></span>
                   </div> -->
-                </div>
-                <div class="skills__data">
-                  <div class="skills__titles">
-                    <h3 class="skills__name">Corn Gray Leaf Spot</h3>
-                    <!-- <span class="skills__number">90%</span> -->
                   </div>
-                  <!-- <div class="skills__bar">
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <h3 class="skills__name">Corn Gray Leaf Spot</h3>
+                      <!-- <span class="skills__number">90%</span> -->
+                    </div>
+                    <!-- <div class="skills__bar">
                     <span class="skills__percentage skills__css"></span>
                   </div> -->
-                </div>
-                <div class="skills__data">
-                  <div class="skills__titles">
-                    <h3 class="skills__name">Potato Early Blight</h3>
-                    <!-- <span class="skills__number">75%</span> -->
                   </div>
-                  <!-- <div class="skills__bar">
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <h3 class="skills__name">Potato Early Blight</h3>
+                      <!-- <span class="skills__number">75%</span> -->
+                    </div>
+                    <!-- <div class="skills__bar">
                     <span class="skills__percentage skills__js"></span>
                   </div> -->
-                </div>
-                <div class="skills__data">
-                  <div class="skills__titles">
-                    <h3 class="skills__name">Strawberry Leaf Scorch</h3>
-                    <!-- <span class="skills__number">80%</span> -->
                   </div>
-                  <!-- <div class="skills__bar">
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <h3 class="skills__name">Strawberry Leaf Scorch</h3>
+                      <!-- <span class="skills__number">80%</span> -->
+                    </div>
+                    <!-- <div class="skills__bar">
                     <span class="skills__percentage skills__react"></span>
                   </div> -->
-                </div>
-                <div class="skills__data">
-                  <div class="skills__titles">
-                    <h3 class="skills__name">Tomato Leaf Mold</h3>
-                    <!-- <span class="skills__number">70%</span> -->
                   </div>
-                  <!-- <div class="skills__bar">
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <h3 class="skills__name">Tomato Leaf Mold</h3>
+                      <!-- <span class="skills__number">70%</span> -->
+                    </div>
+                    <!-- <div class="skills__bar">
                     <span class="skills__percentage skills__node"></span>
                   </div> -->
-                </div>
-                <div class="skills__data">
-                  <div class="skills__titles">
-                    <h3 class="skills__name">Tomato Mosaic Virus</h3>
-                    <!-- <span class="skills__number">75%</span> -->
                   </div>
-                  <!-- <div class="skills__bar">
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <h3 class="skills__name">Tomato Mosaic Virus</h3>
+                      <!-- <span class="skills__number">75%</span> -->
+                    </div>
+                    <!-- <div class="skills__bar">
                     <span class="skills__percentage skills__php"></span>
                   </div> -->
-                </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -386,14 +394,14 @@
           </div>
 
           <div class="qualification__sections"> -->
-            <!--==================== QUALIFICATION CONTENT 1 ====================-->
-            <!-- <div
+      <!--==================== QUALIFICATION CONTENT 1 ====================-->
+      <!-- <div
               class="qualification__content qualification__active"
               data-content
               id="education"
             > -->
-              <!--==================== QUALIFICATION 1 ====================-->
-              <!-- <div class="qualification__data">
+      <!--==================== QUALIFICATION 1 ====================-->
+      <!-- <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Bachelor of Engineering</h3>
                   <span class="qualification__subtitle"
@@ -411,8 +419,8 @@
                 </div>
               </div> -->
 
-              <!--==================== QUALIFICATION 2 ====================-->
-              <!-- <div class="qualification__data">
+      <!--==================== QUALIFICATION 2 ====================-->
+      <!-- <div class="qualification__data">
                 <div></div>
                 <div>
                   <span class="qualification__rounder"></span>
@@ -431,8 +439,8 @@
                 </div>
               </div> -->
 
-              <!--==================== QUALIFICATION 3 ====================-->
-              <!-- <div class="qualification__data">
+      <!--==================== QUALIFICATION 3 ====================-->
+      <!-- <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Secondary (10)</h3>
                   <span class="qualification__subtitle"
@@ -451,10 +459,10 @@
               </div>
             </div> -->
 
-            <!--==================== QUALIFICATION CONTENT 2 ====================-->
-            <!-- <div class="qualification__content" data-content id="work"> -->
-              <!--==================== QUALIFICATION 1 ====================-->
-              <!-- <div class="qualification__data">
+      <!--==================== QUALIFICATION CONTENT 2 ====================-->
+      <!-- <div class="qualification__content" data-content id="work"> -->
+      <!--==================== QUALIFICATION 1 ====================-->
+      <!-- <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">SDE Intern</h3>
                   <span class="qualification__subtitle">udChalo</span>
@@ -470,8 +478,8 @@
                 </div>
               </div> -->
 
-              <!--==================== QUALIFICATION 2 ====================-->
-              <!-- <div class="qualification__data">
+      <!--==================== QUALIFICATION 2 ====================-->
+      <!-- <div class="qualification__data">
                 <div></div>
                 <div>
                   <span class="qualification__rounder"></span>
@@ -488,8 +496,8 @@
                 </div>
               </div> -->
 
-              <!--==================== QUALIFICATION 3 ====================-->
-              <!-- <div class="qualification__data">
+      <!--==================== QUALIFICATION 3 ====================-->
+      <!-- <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">
                     Web Development and Designing Intern
@@ -503,8 +511,8 @@
 
                 <div>
                   <span class="qualification__rounder"></span> -->
-                  <!-- <span class="qualification__line"></span> -->
-                <!-- </div>
+      <!-- <span class="qualification__line"></span> -->
+      <!-- </div>
               </div>
             </div>
           </div>
@@ -531,7 +539,8 @@
 
               <div class="portfolio_">
                 <h3 class="portfolio__title">Corn</h3>
-                <p class="portfolio__description">Dashboard monitoring the real-time parameters of Corn plants.
+                <p class="portfolio__description">
+                  Dashboard monitoring the real-time parameters of Corn plants.
                 </p>
                 <a
                   href="https://isrobharath.grafana.net/goto/qQxkOk84R?orgId=1"
@@ -554,7 +563,9 @@
 
               <div class="portfolio_">
                 <h3 class="portfolio__title">Potato</h3>
-                <p class="portfolio__description">Dashboard monitoring the real-time parameters of Potato plants.
+                <p class="portfolio__description">
+                  Dashboard monitoring the real-time parameters of Potato
+                  plants.
                 </p>
                 <a
                   href="https://isrobharath.grafana.net/goto/ogRMdz8VR?orgId=1"
@@ -577,7 +588,9 @@
 
               <div class="portfolio_">
                 <h3 class="portfolio__title">Strawberry</h3>
-                <p class="portfolio__description">Dashboard monitoring the real-time parameters of Strawberry plants.
+                <p class="portfolio__description">
+                  Dashboard monitoring the real-time parameters of Strawberry
+                  plants.
                 </p>
                 <a
                   href="https://isrobharath.grafana.net/goto/xXz7OzU4g?orgId=1"
@@ -597,7 +610,9 @@
 
               <div class="portfolio_">
                 <h3 class="portfolio__title">Tomato</h3>
-                <p class="portfolio__description">Dashboard monitoring the real-time parameters of Tomato plants.
+                <p class="portfolio__description">
+                  Dashboard monitoring the real-time parameters of Tomato
+                  plants.
                 </p>
                 <a
                   href="https://isrobharath.grafana.net/goto/BIjnOzU4R?orgId=1"
@@ -720,14 +735,14 @@
     <script src="./packages/js/main.js"></script>
     <script>
       var typed = new Typed(".typing-text", {
-        strings: [
-            "Yadhu Krishna P P",
-            "Reetesh Tomar",
-            "Shubham Choubey",
-        ],
+        strings: ["Yadhu Krishna P P", "Reetesh Tomar", "Shubham Choubey"],
         loop: true,
         typeSpeed: 100,
       });
+
+      function myFunction() {
+        alert("The soil is wet");
+      }
     </script>
   </body>
 </html>
