--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                   plants.
                 </p>
                 <a
-                  href="https://isrobharath.grafana.net/goto/xXz7OzU4g?orgId=1"
+                  href="https://isrobharath.grafana.net/goto/F5Fgf4lVR?orgId=1"
                   class="button button--flex button--small portfolio__button"
                 >
                   Demo
@@ -615,7 +615,7 @@
                   plants.
                 </p>
                 <a
-                  href="https://isrobharath.grafana.net/goto/BIjnOzU4R?orgId=1"
+                  href="https://isrobharath.grafana.net/goto/SyXkfVl4g?orgId=1"
                   class="button button--flex button--small portfolio__button"
                 >
                   Demo
